[project]
name = "pr-context"
version = "0.1.0"
description = "Simple script for pulling PR context for LLMs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Runtime dependencies
    "python-dotenv>=1.0.0",
    "pygithub>=2.6.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.5",
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"